--- a/writings.html
+++ b/writings.html
@@ -273,6 +273,17 @@
   </div>
 </div>
 
+<div class="article-item">
+  <div class="article-left">
+    <div class="article-title">
+      <a href="geo.html">Optimizing Geospatial Property Search: From 10,000 Queries to Sub-Second Performance</a>
+      <span class="read-time">(12 mins)</span>
+    </div>
+    <p class="article-description">how I optimized location-based property search from 2-5s to under 200ms using bounding box filtering</p>
+  </div>
+  <div class="article-date">22/01</div>
+</div>
+
 <footer>
   <div class="footer-content">
     <div class="footer-email">
