--- a/article-geospatial-optimization.html.html
+++ b/article-geospatial-optimization.html.html
@@ -128,31 +128,6 @@
       font-weight: 600;
     }
 
-    .article-content code {
-      background-color: #f5f5f5;
-      padding: 2px 6px;
-      border-radius: 3px;
-      font-family: 'Monaco', 'Courier New', monospace;
-      font-size: 0.9em;
-      color: #e83e8c;
-    }
-
-    .article-content pre {
-      background-color: #f5f5f5;
-      padding: 20px;
-      border-radius: 6px;
-      overflow-x: auto;
-      margin-bottom: 25px;
-      border-left: 4px solid #000;
-    }
-
-    .article-content pre code {
-      background-color: transparent;
-      padding: 0;
-      color: #1a1a1a;
-      font-size: 0.9rem;
-    }
-
     .article-content ul {
       margin-bottom: 25px;
       padding-left: 25px;
@@ -162,52 +137,55 @@
       margin-bottom: 10px;
     }
 
-    .article-content ol {
-      margin-bottom: 25px;
-      padding-left: 25px;
+    .article-content pre {
+      background-color: #f5f5f5;
+      padding: 20px;
+      border-radius: 6px;
+      overflow-x: auto;
+      margin: 25px 0;
+      border: 1px solid #e8e8e8;
     }
 
-    .article-content ol li {
-      margin-bottom: 10px;
+    .article-content code {
+      font-family: 'Monaco', 'Courier New', monospace;
+      font-size: 0.9em;
     }
 
-    .article-content table {
+    .article-content pre code {
+      color: #2a2a2a;
+      background: none;
+      padding: 0;
+    }
+
+    .article-content :not(pre) > code {
+      background-color: #f5f5f5;
+      padding: 2px 6px;
+      border-radius: 3px;
+      color: #e83e8c;
+    }
+
+    .performance-table {
       width: 100%;
       border-collapse: collapse;
       margin: 30px 0;
       font-size: 0.95rem;
     }
 
-    .article-content table th,
-    .article-content table td {
+    .performance-table th,
+    .performance-table td {
       padding: 12px;
       text-align: left;
       border-bottom: 1px solid #e8e8e8;
     }
 
-    .article-content table th {
+    .performance-table th {
       background-color: #f9f9f9;
       font-weight: 600;
       color: #000;
     }
 
-    .article-content table tr:last-child td {
+    .performance-table tr:last-child td {
       border-bottom: none;
-    }
-
-    .highlight-box {
-      background-color: #f9f9f9;
-      border-left: 4px solid #000;
-      padding: 20px;
-      margin: 30px 0;
-    }
-
-    .highlight-box p {
-      margin-bottom: 10px;
-    }
-
-    .highlight-box p:last-child {
-      margin-bottom: 0;
     }
 
     .footnote {
@@ -216,6 +194,7 @@
       margin-top: 60px;
       padding-top: 30px;
       border-top: 1px solid #e8e8e8;
+      font-style: italic;
     }
 
     @media (max-width: 768px) {
@@ -250,6 +229,7 @@
       }
 
       .article-content pre {
+        padding: 15px;
         font-size: 0.85rem;
       }
     }
@@ -270,9 +250,9 @@
     <p class="breadcrumb"><a href="index.html">home</a> / <a href="writings.html">writings</a> / optimizing geospatial property search</p>
   </div>
 
-  <h1 class="article-title">Optimizing Geospatial Property Search: From 10,000 Queries to Sub-Second Performance</h1>
+  <h1 class="article-title">optimizing geospatial property search: from 10,000 queries to sub-second performance</h1>
   
-  <div class="article-meta">January 22, 2025 • Stephen Awuah • 12 min read</div>
+  <div class="article-meta">January 22, 2026 • Stephen Awuah • 15 min read</div>
 
   <div class="article-content">
     <h2>The Problem</h2>
@@ -431,7 +411,8 @@ private haversine(lat1: number, lon1: number, lat2: number, lon2: number) {
 }</code></pre>
 
     <h2>Performance Results</h2>
-    <table>
+
+    <table class="performance-table">
       <thead>
         <tr>
           <th>Metric</th>
@@ -492,13 +473,13 @@ private haversine(lat1: number, lon1: number, lat2: number, lon2: number) {
     <h2>Future Optimizations</h2>
     <p>For even better performance at scale, consider:</p>
 
-    <ol>
+    <ul>
       <li><strong>PostGIS Extension:</strong> Native geospatial indexing and queries</li>
       <li><strong>Spatial Indexes:</strong> R-tree or GiST indexes for coordinate columns</li>
       <li><strong>Caching:</strong> Redis cache for popular search areas</li>
       <li><strong>Database Partitioning:</strong> Partition by geographic regions</li>
       <li><strong>Pre-computed Grids:</strong> Divide areas into grid cells for faster lookups</li>
-    </ol>
+    </ul>
 
     <h2>Conclusion</h2>
     <p>This optimization transformed a feature from "unusably slow" to "production-ready" with a few strategic changes. The lesson? Modern web apps demand sub-second responses, and achieving that often means rethinking your data access patterns from the ground up.</p>
@@ -506,7 +487,7 @@ private haversine(lat1: number, lon1: number, lat2: number, lon2: number) {
     <p>The real win isn't just the speed—it's building a foundation that scales. Whether you have 10,000 or 1,000,000 properties, this approach keeps searches fast and users happy.</p>
 
     <div class="footnote">
-      <p><em>Have you optimized geospatial queries in your apps? What techniques worked for you? Share your experiences in the comments!</em></p>
+      <p>Have you optimized geospatial queries in your apps? What techniques worked for you? Feel free to reach out and share your experiences!</p>
     </div>
   </div>
 </div>
