article on koyeb using heroku node.js build pack under the hood

--- a/writings.html
+++ b/writings.html
@@ -248,6 +248,17 @@
 
   <div class="year-section">
     <h2>2026</h2>
+
+    <div class="article-item">
+      <div class="article-left">
+        <div class="article-title">
+          <a href="article-koyeb-heroku-buildpack.html">When Koyeb Ghosted Me: A TypeScript Compiler Meltdown</a>
+          <span class="read-time">(18 mins)</span>
+        </div>
+        <p class="article-description">how I learned Koyeb uses Heroku buildpacks and both decided to hate my code simultaneously</p>
+      </div>
+      <div class="article-date">28/01</div>
+    </div>
     
     <div class="article-item">
       <div class="article-left">
