--- a/writings.html
+++ b/writings.html
@@ -272,7 +272,7 @@
     </div>
   </div>
 
-  <div class="year-section">
+  <!-- <div class="year-section">
     <h2>2025</h2>
     
     <div class="article-item">
@@ -284,7 +284,7 @@
         <p class="article-description">how I reduced costs by building from scratch vs using Paystack's feature</p>
       </div>
       <div class="article-date">15/01</div>
-    </div>
+    </div> -->
     
     <div class="article-item">
       <div class="article-left">
