added hive labs

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
 
   <div class="section">
     <h2>What I'm working on</h2>
+    <p>1. <a href="https://steady-bronze-cohzwizd5h.edgeone.dev/" target="_blank">HiveLabs</a> - Founder of HiveLabs — building Africa’s financial and property infrastructure through savings, flexible home ownership, and seamless payments..</p>
     <p>1. <a href="https://cyzegg.readdy.co/" target="_blank">FlexDown</a> - The operating system for real estate in Ghana: unified property management, verified listings & transparent transactions.</p>
     <p>2. <a href="https://urban-lime-qi3ow1njg8.edgeone.dev/" target="_blank">EdgeObserve</a> Logging and metrics for distributed containers. Built specifically for k3s, IoT, and edge infrastructure with a sub-10MB footprint..</p>
     <p>3. <a href="https://github.com/stawuah/Sink" target="_blank">Sink</a> - observability & logging for edge containers/infra, configurable to development workflow (Golang).</p>
